Fix footnote overflow issue

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -211,3 +211,7 @@ figcaption {
 .page-content ol {
     margin-bottom: 1em !important;
 }
+
+.footnotes {
+    word-break: break-all;
+}
